gateway/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ingress-gateway
  labels:
    istio-injection: enabled
